# os-proj-2

./: .gitignore  CMakeLists.txt  Fork.cpp  Fork.h  Philosopher.cpp  Philosopher.h  Philosopher_State.h  Screen_Printer.cpp  Screen_Printer.h  Table.cpp  Table.h  filozofowie2  main.cpp
